# ClassPack

./: .gitignore  LICENSE  Makefile  README.md  app.py  database.py  docker-compose.yml  latex_converter.py  optimizer.py  otimizador_filas.py  pyproject.toml  requirements.txt
class_pack/: database.py  optimizer.py
client/: index.html  sobre.html
client/css/: styles.css
client/js/: init.js  language.js  script-eng.js  script.js  scripts.js
client_v2/: index.html
client_v2/css/: custom.css
client_v2/js/: script.js
doc/: links.md
docker_images/api/: Dockerfile
script/: packmod.mod  studentpack_fixpen.f90  teste.x
src/: app.py
static/: firstpage.html
static/js/: scripts.js
templates/: main.html
