[tool.poetry]
name = "classpack"
version = "0.1.0"
description = "No contexto da COVID-19 a volta às aulas presenciais está sendo planejada por gestores educacionais. Dentre as medidas que serão adotadas para minimizar o risco de contágio dos alunos e professores pelo coronavírus está o distanciamento entre as carteiras nas salas de aula. Nossa contribuição consiste no desenvolvimento de um aplicativo web de livre acesso para auxiliar este planejamento."
authors = ["Gustavo Collaço, Marcos Magueta, Giuseppe Fiorentino Neto"]
license = "MIT License"

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^2.0.1"
Flask-Cors = "^3.0.10"
cloudant = "^2.14.0"
ortools = "^9.0.9048"
numpy = "^1.21.0"
isort = "^5.9.1"
glob2 = "^0.7"
configparser = "^5.0.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
